# manifold_flow

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: DATA_INSTRUCTIONS.md
docs/: ARTIFACT.md
experiments/: b12_a6_ablation.py  b12_lstm_5seeds.py  b14_lstm_baselines.py  cifar100_layer_selective.py  cifar100_r18_sgd.py  e2_baselines.py  lenet_cifar10_b10.py  mlp_batch9.py  transformer_wikitext_b10.py
experiments/results/: anchor_1_results.json  anchor_2_results.json
experiments/results/ablation/: ablation_summary.json
experiments/results/lstm_wt2_proj/: partial_adam.json  partial_sgd.json  stage_b_results_5seeds.json
experiments/results/screen_v2/: all_results_seed42.json
experiments/results/screen_v2/fashion_fc/: QUICK_VERDICT.md  results_seed42.json
experiments/results/screen_v2/ft_transformer_higgs/: QUICK_VERDICT.md  results_seed42.json
experiments/results/screen_v2/ptb_lstm_proj/: QUICK_VERDICT.md  results_seed42.json
experiments/results/screen_v2/resnet18_fchead/: QUICK_VERDICT.md  results_seed42.json
scripts/: reproduce_adult_mlp.sh  reproduce_lstm.sh  reproduce_transformer.sh
src/baselines/: __init__.py  sn_softorth_fixedb.py
src/manifoldflow/: __init__.py  fixed_stiefel.py  intrinsic_muon.py  manifoldflow_optimizer.py  parametrization.py  retraction.py  spd_ops.py  tangent.py
tests/: conftest.py  test_decomposition_orthogonality.py  test_finite_diff_geometry.py  test_frozen_equivalence.py  test_spd_feasibility.py  test_spectrum_identity.py  test_stiefel_feasibility.py  test_tangent_condition.py
(+7 files in other folders)
