[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "manifoldflow"
version = "0.1.0"
description = "SPD-relaxed Stiefel layers with a learnable bounded singular spectrum"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "[Anonymous]"},
]
dependencies = [
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
